# helloNDKApp

./: .gitignore  .gitmodules
app/: build.gradle
app/src/androidTest/java/com/app/example/jwkang2/hello/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/app/example/jwkang2/hello/: MainActivity.java
app/src/main/java/com/app/example/jwkang2/hello/control/: HTuningParamCable.java  HTuningParamTer.java
app/src/main/java/com/app/example/jwkang2/hello/model/: HTunerHal.java
app/src/test/java/com/app/example/jwkang2/hello/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ndk/: README.md
ndk/jni/: .gitignore  Android.mk  Application.mk  CMakeLists.txt  com_app_example_jwkang2_hello_model_HTunerHal.cpp
ndk/jni/include/: com_app_example_jwkang2_hello_model_HTunerHal.h
